# roptlite

./: CMakeLists.txt
Manifolds/: CFixedRankQ2F.cpp  CStiefel.cpp  CSymFixedRankQ.cpp  Element.cpp
Others/: BlasLapackCppWrapper.cpp  BlasLapackCppWrapper.h  SparseMatrix.cpp  def.h  f2c.h
Others/wavelet/: wavelet.cpp
Problems/: CFRankQ2FBlindDecon2D.cpp  CSFRQPhaseRetrieval.cpp
tests/: CMakeLists.txt  DriverCpp.cpp  DriverCpp.h  DriverJuliaProb.cpp  DriverMexProb.cpp  TestCFRankQ2FBlindDecon2D.cpp  TestCFRankQ2FBlindDecon2D.h  TestCSFRQPhaseRetrieval.cpp  TestCSFRQPhaseRetrieval.h  TestCStieBrockett.cpp  TestCStieBrockett.h  TestElement.cpp  TestEucQuadratic.cpp  TestEucQuadratic.h  TestFRankE3FMatCompletion.cpp  TestFRankE3FMatCompletion.h  TestFRankESparseApprox.cpp  TestFRankESparseApprox.h  TestFRankETextureInpainting.cpp  TestFRankETextureInpainting.h  TestFRankEWeightApprox.cpp  TestFRankEWeightApprox.h  TestFRankQ2FMatCompletion.cpp  TestFRankQ2FMatCompletion.h  TestGrassMatCompletion.cpp  TestGrassMatCompletion.h  TestGrassPCA.cpp  TestGrassPCA.h  TestGrassRQ.cpp  TestGrassRQ.h  TestGrassSVPCA.cpp  TestGrassSVPCA.h  TestObliqueSPCA.cpp  TestObliqueSPCA.h  TestPoincareEmbeddings.cpp  TestPoincareEmbeddings.h  TestProdStieSumBrockett.cpp  TestProdStieSumBrockett.h  TestSFRQLyapunov.cpp  TestSFRQLyapunov.h  (+10 more)
